discussion/kv_engine/139408/139408_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

Try to get compaction and flusher in parallel

Change-Id: I28e9d69764feba6d78be4208d9a06408d9e26f92

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2020-11-02 18:07:11.000000000
Message: 
Uploaded patch set 2.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-11-02 18:22:01.000000000
Message: 
Patch Set 2: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/5396/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1745:13: error: too many arguments to function call, expected at most 5, have 6 [clang-diagnostic-error]
            [&on_disk_prepares](Db& compacted) {
            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/couchstore/include/libcouchstore/couch_db.h:1340:1: note: "replay" declared here
LIBCOUCHSTORE_API
^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/build-kv_engine-clang-tidy/couchstore/include/libcouchstore/visibility.h:15:33: note: expanded from macro "LIBCOUCHSTORE_API"
#      define LIBCOUCHSTORE_API __attribute__((visibility("default")))
                                ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/5396/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1745:13:
error: too many arguments to function call, expected at most 5, have 6 [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/5396/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/27192/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1745:13:
error: too many arguments to function call, expected at most 5, have 6
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/27192/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/31489/ : FAILURE

Compile error at ..\kv_engine\engines\ep\src\couch-kvstore\couch-kvstore.cc(50): fatal error C1083: Cannot open include file: "sys/sendfile.h": No such file or directory ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/31489/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/6875/ : FAILURE

Compile error at [2020-11-02T18:19:04.447Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1773:14:
error: could not convert ?<lambda closure object>CouchKVStore::tryToCatchUpDbFile(Db&, Db&, std::unique_lock<std::mutex>&, bool, uint64_t&, Vbid)::<lambda(Db&, Db&, const DocInfo*, const DocInfo*)>{(* & on_disk_prepares)}? from ?CouchKVStore::tryToCatchUpDbFile(Db&, Db&, std::unique_lock<std::mutex>&, bool, uint64_t&, Vbid)::<lambda(Db&, Db&, const DocInfo*, const DocInfo*)>? to ?PrecommitHook {aka std::function<couchstore_error_t(Db&)>}?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/6875/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/7044/ : FAILURE

Compile error at [2020-11-02T18:08:06.773Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1745:13:
error: too many arguments to function call, expected at most 5, have 6
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/7044/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/5818/ : FAILURE

Compile error at [2020-11-02T18:09:20.740Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:50:10:
fatal error: "sys/sendfile.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/5818/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/6751/ : FAILURE

Compile error at [2020-11-02T18:12:20.166Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1773:14:
error: could not convert ?<lambda closure object>CouchKVStore::tryToCatchUpDbFile(Db&, Db&, std::unique_lock<std::mutex>&, bool, uint64_t&, Vbid)::<lambda(Db&, Db&, const DocInfo*, const DocInfo*)>{(* & on_disk_prepares)}? from ?CouchKVStore::tryToCatchUpDbFile(Db&, Db&, std::unique_lock<std::mutex>&, bool, uint64_t&, Vbid)::<lambda(Db&, Db&, const DocInfo*, const DocInfo*)>? to ?PrecommitHook {aka std::function<couchstore_error_t(Db&)>}?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/6751/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/14676/ : FAILURE

Compile error at [2020-11-02T18:09:13.404Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1745:13:
error: too many arguments to function call, expected at most 5, have 6
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/14676/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/3925/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
